# rules_playwright_old

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/workspace/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
playwright/: BUILD.bazel  create_workspace.ts  extensions.bzl  repositories.bzl  toolchain.bzl  unzip_browser.bzl
playwright/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
playwright/test-out/: BUILD.bazel  WORKSPACE  unzip_browser.bzl
