load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//playwright/private:resolved_toolchain.bzl", "resolved_toolchain")

package(default_visibility = ["//visibility:public"])

# For stardoc to reference the files
exports_files(["defs.bzl"])

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = [
        "//playwright/private:toolchains_repo",
        "//playwright/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [":repositories"],
)

constraint_setting(name = "linux_version")

constraint_value(
    name = "ubuntu18.04",
    constraint_setting = ":linux_version",
)

constraint_value(
    name = "ubuntu20.04",
    constraint_setting = ":linux_version",
)

constraint_value(
    name = "ubuntu22.04",
    constraint_setting = ":linux_version",
)

constraint_value(
    name = "debian11",
    constraint_setting = ":linux_version",
)

constraint_value(
    name = "debian12",
    constraint_setting = ":linux_version",
)

constraint_setting(name = "mac_version")

constraint_value(
    name = "mac10.13",
    constraint_setting = ":mac_version",
)

constraint_value(
    name = "mac10.14",
    constraint_setting = ":mac_version",
)

constraint_value(
    name = "mac10.15",
    constraint_setting = ":mac_version",
)

constraint_value(
    name = "mac11",
    constraint_setting = ":mac_version",
)

constraint_value(
    name = "mac12",
    constraint_setting = ":mac_version",
)

constraint_value(
    name = "mac13",
    constraint_setting = ":mac_version",
)

constraint_value(
    name = "mac14",
    constraint_setting = ":mac_version",
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
)
