# Override http_archive for local testing
local_repository(
    name = "mrmeku_rules_playwright",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_playwright setup #
######################
# Fetches the rules_playwright dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@mrmeku_rules_playwright//playwright:repositories.bzl", "rules_playwright_dependencies")

rules_playwright_dependencies()
